# game-AI

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
config/: plugins.cfg  resources.cfg
core/: CMakeLists.txt
core/src/: SandboxApplication.cpp
docs/: README.md  raylib.md
include/app/: BaseApplication.h  SandboxApplication.h
include/debug/: DebugDrawer.h
include/object/: Object.h  Sandbox.h
include/resources/: LuaFile.h  LuaFileManager.h  Resource.h  ResourceManager.h
include/sandbox/: Sandbox.h
include/utils/: IcoSphere.h  Timer.h  ToolKit.h  type.h
src/: NONE.cpp
src/app/: BaseApplication.cpp  SandboxApplication.cpp
src/debug/: DebugDrawer.cpp
src/object/: Object.cpp
src/resources/: LuaFile.cpp
src/utils/: IcoSphere.cpp  Timer.cpp
test/: CMakeLists.txt
test/01-test-ogre/: CMakeLists.txt  main.cpp
test/01-test-raylib/: main.cpp
test/02-test-BaseApplication-01/: main.cpp
test/02-test-SandboxApplication/: main.cpp
test/03-test-SandboxApplication-01/: main.cpp
test/03-test-loadScript/: main.cpp
test/src/: main.cpp
utils/: generate-singleton-template.mjs
